tests/unit/default/syntax-error/014-create-table.x.t
---- IN ----
+%table|
---- OUT ----
---- ERR ----
syntax: expected <table-ddl-spec> after `+%table` near `|` at position 7 - at line 1
---- EXIT ----
1
